--- a/activityservice/src/main/resources/application.yml
+++ b/activityservice/src/main/resources/application.yml
@@ -5,6 +5,16 @@ spring:
   mongodb:
       ***REMOVED***
       database: activitydb
+
+  kafka:
+    bootstrap-servers: localhost:9092
+    producer:
+        key-serializer: org.apache.kafka.common.serialization.StringSerializer
+        value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+kafka:
+  topic:
+    name: activity-events
+
 server:
   port: 8082
 
@@ -14,4 +24,7 @@ eureka:
     register-with-eureka: true
     service-url:
       defaultZone: http://localhost:8761/eureka/
+
+
+
 
