Change MongoDB URI password in application.yml
Updated MongoDB URI with a new password.

--- a/aiservice/src/main/resources/application.yml
+++ b/aiservice/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
       name: aiservice
 
   mongodb:
-    ***REMOVED***
+    uri: mongodb+srv://rahulkumar230501_db_user:youpassword@airecommendationdb.qojuob8.mongodb.net/?appName=airecommendationdb
     database: airecommendationdb
 
   kafka:
